# local-rag

./: .gitignore  CLAUDE.md  MILESTONES.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: embeddings-and-similarity.md  ollama-local-inference.md  what-is-rag.md
src/: __init__.py  chunk.py  cli.py  embed.py  rag.py  store.py
tests/: test_chunk.py  test_rag.py  test_store.py
