[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag"
version = "0.1.0"
description = "A from-scratch, fully-offline RAG pipeline: Ollama + sentence-transformers + hand-rolled numpy cosine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anthony Ta" }]
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.8",
    "pytest>=8.0",
    "build>=1.0",
]

[project.scripts]
local-rag = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_redundant_casts = true
# numpy ships inline types; third-party libs without stubs are ignored below.

[[tool.mypy.overrides]]
module = ["sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
